Update INSTALL.md
How to see CoreNLP logging messages.